<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.app.dyc.krp.RegisterUserDetailActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/test_icon" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/icon"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewphoneNumber"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/phone_number"
                android:visibility="visible"
                tools:text="Phone: " />

            <TextView
                android:id="@+id/register_user_detail_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/full_name"
                android:visibility="visible"
                tools:text="Full Name: " />

            <TextView
                android:id="@+id/register_user_detail_fName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:visibility="visible"
                tools:text="Gender: " />

            <TextView
                android:id="@+id/register_user_detail_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewParish"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/parish"
                android:visibility="visible"
                tools:text="Parish: " />

            <TextView
                android:id="@+id/register_user_detail_Parish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/d_o_b"
                android:visibility="visible"
                tools:text="D.O.B: " />

            <TextView
                android:id="@+id/register_user_detail_Age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>