<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.app.dyc.krp.SignUpActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/test_icon" />

    <LinearLayout
        android:id="@+id/layout_signup_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/icon"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewphoneNumber"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="Phone number: "
                android:visibility="visible"
                tools:text="Phone number: " />

            <EditText
                android:id="@+id/field_phoneNumber"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/phone_title_text"
                android:inputType="phone"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="Full Name: "
                android:visibility="visible"
                tools:text="Full Name: " />

            <EditText
                android:id="@+id/field_fName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCentre"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="Centre: "
                android:visibility="visible"
                tools:text="Centre: " />


            <Spinner
                android:id="@+id/field_Centre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/centres"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:prompt="@string/centre_prompt" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewParish"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="Parish: "
                android:visibility="visible"
                tools:text="Parish: " />


            <Spinner
                android:id="@+id/field_Parish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:prompt="@string/parish_prompt"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="Gender: "
                android:visibility="visible"
                tools:text="Gender: " />


            <Spinner
                android:id="@+id/field_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:prompt="@string/gender_prompt"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="D.O.B: "
                android:visibility="visible"
                tools:text="D.O.B: " />

            <ImageView
                android:id="@+id/register_user_detail_Age_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:id="@+id/field_Age"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_transparent_bg"
            android:text="@string/sign_up" />

    </LinearLayout>

</RelativeLayout>
